# rag-hallucination-detector

./: ARCHITECTURE.md  Dockerfile  README.md  pyproject.toml  setup.py
ProRes/: Makefile  requirements.txt
ProRes/examples/: api_client.py  basic_usage.py
ProRes/hallucination_detector/: __init__.py  config.py
ProRes/hallucination_detector/api/: __init__.py  server.py
ProRes/hallucination_detector/core/: detector.py  result.py
ProRes/hallucination_detector/strategies/: __init__.py  base.py  claim.py  entity.py  semantic.py
ProRes/hallucination_detector/utils/: __init__.py
ProRes/tests/: __init__.py  test_strategies.py
benchmarks/: __init__.py  evaluate.py
examples/: __init__.py
hallucination_detector/core/: __init__.py
hallucination_detector/strategies/: nli.py
hallucination_detector/utils/: text_processing.py
tests/: test_detector.py
