[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-hallucination-detector"
version = "1.0.0"
description = "Advanced RAG-aware hallucination detection system using multi-signal analysis"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Dash", email = "dash2199@github.com"}
]
keywords = [
    "hallucination-detection",
    "RAG",
    "NLP",
    "natural-language-inference",
    "semantic-similarity",
    "fact-verification"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
homepage = "https://github.com/dash2199/rag-hallucination-detector"
repository = "https://github.com/dash2199/rag-hallucination-detector"

[project.scripts]
hallucination-api = "hallucination_detector.api.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["hallucination_detector*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

